# winfsp-minimal-repro

./: Cargo.toml  README.md
src/: main.rs
