[package]
name = "my-winfsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
libc = "0.2"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
]


[dependencies.winfsp]
version = "0.9.3"
features = ["notify", "delayload", "system"]

[dependencies.winfsp-sys]
version = "0.2"

[build-dependencies]
winfsp = { version = "0.8", default-features = false, features = [
    "build",
    "delayload",
] }
